force-app/main/default/objects/FAQ_Entry__c/FAQ_Entry__c.object-meta.xml
<CustomObject>
    <description>A curated knowledge-base entry per topic/objection cluster: recommended response, frequency, handled-success rate, and approval status. Only Approved entries are servable.</description>
    <label>FAQ Entry</label>
    <nameField>
        <displayFormat>FAQ-{0000}</displayFormat>
        <label>Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQ Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>