force-app/main/default/objects/FAQ_Entry__c/fields/Approved_At__c.field-meta.xml
<CustomField>
    <fullName>Approved_At__c</fullName>
    <description>When the current version was approved.</description>
    <label>Approved At</label>
    <type>DateTime</type>
</CustomField>