force-app/main/default/objects/FAQ_Entry__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who approved the current version.</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved FAQ Entries</relationshipLabel>
    <relationshipName>Approved_FAQ_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>