force-app/main/default/objects/FAQ_Entry__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Question or Objection.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Objection</fullName>
                <default>true</default>
                <label>Objection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>