force-app/main/default/objects/FAQ_Entry__c/fields/Cluster_Key__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Key__c</fullName>
    <description>Unique cluster key the entry is built from; used to upsert one entry per cluster.</description>
    <externalId>true</externalId>
    <label>Cluster Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>