force-app/main/default/objects/FAQ_Entry__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>How many candidate calls fell into this cluster.</description>
    <label>Frequency</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>