force-app/main/default/objects/FAQ_Entry__c/fields/Handled_Success_Rate__c.field-meta.xml
<CustomField>
    <fullName>Handled_Success_Rate__c</fullName>
    <description>Percent (0-100) of calls in this cluster that ended in a signed retainer.</description>
    <label>Handled Success Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>