force-app/main/default/objects/FAQ_Entry__c/fields/Recommended_Response__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Response__c</fullName>
    <description>Best-practice response. AI-drafted from winning calls; servable only after approval.</description>
    <label>Recommended Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>