force-app/main/default/objects/FAQ_Entry__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Short human-readable title for the entry.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>